Add data disclaimer tooltip to Median Rate card

--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
                             <span class="comparison-value" id="your-rate">$0</span>
                         </div>
                         <div class="comparison-card state-avg">
-                            <span class="comparison-label">Median Rate</span>
+                            <div class="label-with-tooltip">
+                                <span class="comparison-label">Median Rate</span>
+                                <div class="tooltip-wrapper">
+                                    <span class="tooltip-trigger">?</span>
+                                    <div class="tooltip-box">Median rates represent industry benchmarks. Actual
+                                        reimbursement varies by payer, contract terms, and specific service criteria.
+                                    </div>
+                                </div>
+                            </div>
                             <span class="comparison-value" id="state-avg-value">$0</span>
                         </div>
                     </div>
