Add privacy policy, terms of service, footer disclaimer, and remove header

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 <body>
     <div class="app">
-        <!-- Header -->
+        <!-- Header (commented out - uncomment to restore)
         <header class="header header-centered">
             <a href="https://www.flychain.us/contact" target="_blank" rel="noopener noreferrer" class="header-brand">
                 <img src="flychain-logo-hq.png" alt="Flychain" class="flychain-logo-centered">
                 <span class="brand-subtitle">Contracted Rate Benchmark</span>
             </a>
         </header>
+        -->
 
         <!-- Hero Section -->
         <main class="main">
@@ -194,7 +195,14 @@
 
         <!-- Footer -->
         <footer class="footer">
+            <p class="footer-disclaimer">Data is for informational purposes only and may not reflect actual
+                reimbursement rates. Consult with a billing professional for specific guidance.</p>
             <p>Powered by <strong>Flychain</strong> • Industry benchmarks for ABA providers</p>
+            <div class="footer-links">
+                <a href="privacy.html">Privacy Policy</a>
+                <span class="footer-divider">•</span>
+                <a href="terms.html">Terms of Service</a>
+            </div>
         </footer>
     </div>
 
