--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
         <footer class="footer">
             <p class="footer-disclaimer">Data is for informational purposes only and may not reflect actual
                 reimbursement rates. Consult with a billing professional for specific guidance.</p>
-            <p>Powered by <strong>Flychain</strong> • Industry benchmarks for ABA providers</p>
+            <p>Powered by <strong>Flychain</strong> • Data sourced from payer disclosures under the Transparency in
+                Coverage Act</p>
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a>
                 <span class="footer-divider">•</span>
