Add business name field and privacy disclaimer to email gate

--- a/index.html
+++ b/index.html
@@ -188,8 +188,13 @@
                     <form id="email-form" class="email-form">
                         <input type="email" id="email-input" class="email-input" placeholder="you@practice.com"
                             required>
+                        <input type="text" id="business-name-input" class="email-input"
+                            placeholder="Practice name (optional)">
                         <button type="submit" class="email-submit-btn">Continue</button>
                     </form>
+                    <p class="email-disclaimer">By submitting, you agree to receive occasional updates from Flychain. We
+                        respect your privacy and will never share your information. <a href="privacy.html"
+                            target="_blank">Privacy Policy</a></p>
                 </div>
             </div>
         </div>
