fix: cta layout responsiveness and email placeholder update

--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
                     <h3 class="email-modal-title">🔓 Unlock Unlimited Benchmarks</h3>
                     <p class="email-modal-text">Enter your email to continue analyzing your ABA rates.</p>
                     <form id="email-form" class="email-form">
-                        <input type="email" id="email-input" class="email-input" placeholder="you@practice.com"
-                            required>
+                        <input type="email" id="email-input" class="email-input" placeholder="you@example.com" required>
                         <input type="text" id="business-name-input" class="email-input" placeholder="Practice name"
                             required>
                         <button type="submit" class="email-submit-btn">Continue</button>
